--- a/Aula 06/css/styles02.css
+++ b/Aula 06/css/styles02.css
@@ -20,7 +20,7 @@ main{
     flex-direction: row;
     flex-wrap: wrap;
 }
-.divFilme{
+.divProdutos{
     width: 23%;
     background-color: rgb(255, 255, 255);
     box-shadow: 0px 0px 10px silver;
@@ -29,7 +29,7 @@ main{
     margin-bottom: 50px;
     
 }
-.imgFilme{
+.imgProdutos{
     width: 100%;
     height: auto;
     border-top-left-radius: 10px;
@@ -41,7 +41,7 @@ h2{
     font-size: 13pt;
     font-family: "arial";
 }
-.pLancamento{
+.pdata{
     padding: 10px;
     font-family: "arial";
     color: rgb(100, 100, 100);
