--- a/Aula 06/css/styles02.css
+++ b/Aula 06/css/styles02.css
@@ -4,44 +4,90 @@
     box-sizing: border-box;
 }
 header{
-    background-color: rgb(7, 49, 104);
-    padding: 40px 0;
+    padding: 35px;
+    background-color: red;
+    position: fixed;
+    width: 100%;
+    top: 0;
 }
 h1{
     text-align: center;
-    font-family: "verdana";
-    font-size: 24pt;
-    color: rgb(255, 255, 255);
+    font-family: "arial";
+    font-size: 30pt;
+    font-weight: lighter;
+    color: whitesmoke;
 }
 main{
-    margin: 20px auto;
+    margin: 100px auto 50px auto;
     width: 70vw;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
 }
-.divProdutos{
-    width: 23%;
-    background-color: rgb(255, 255, 255);
-    box-shadow: 0px 0px 10px silver;
-    margin: 10px;
+.divProduto{
+    width: 46%;
+    background-color: whitesmoke;
+    box-shadow: 5px 5px 10px gray;
+    margin: 20px;
     border-radius: 10px;
     margin-bottom: 50px;
+    border-top: 10px;
     
 }
-.imgProdutos{
+.divProduto .imgProduto{
     width: 100%;
     height: auto;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     
 }
-h2{
+.divMiniatura{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+.divMiniatura .imgMiniatura{
+    width: 100px;
+    height: 60px;
+    margin: 5px;
+}
+.divCard{
+    background-color: rgba(0,0,0,0.5);
+    position: absolute;
+    top: 0;
+    left: 20vh;
+    height: 0vh;
+    width: 80vw;
+    z-index: 100000;
+    box-shadow: 5px 5px 10px rgba(128, 128, 128, 0.411);
+    margin: 20px;
+    border-radius: 10px;
+    margin-bottom: 50px;
+    border-top: 10px;
+    text-align: center;
+    transition: ease 0.5s;
+}
+.fechar{
+    position: absolute;
+    right: 13px;
+    bottom: 20px;
+    color: white;
+    font-weight: bold;
+    z-index: 10050;
+}
+
+.h2Dicr{
+    padding: 15px;
+    font-size: 13pt;
+    font-family: "arial";
+}
+.h3Marca{
     padding: 10px;
     font-size: 13pt;
     font-family: "arial";
 }
-.pdata{
+.pPreco{
     padding: 10px;
     font-family: "arial";
     color: rgb(100, 100, 100);
